[Technique] More tests passing